--- a/index.html
+++ b/index.html
@@ -36,7 +36,26 @@
         <h2 class="sobre-titulo">Sobre Mim</h2>
         <div class="sobre-caixa">
             <p class="sobre-paragrafo">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut officiis impedit aliquam labore explicabo eos saepe cum fugit libero consequuntur distinctio dolorem voluptas, consectetur ratione ut pariatur! Repellat, atque omnis.
+  Comecei desde cedo com a programação, com arduíno e ensinos básicos com Scratch, fiz parte de inúmeros projetos sociais que me proporcionaram isso, um exemplo mais claro é a Oficina do Saber onde pude ampliar meus
+conhecimentos com informática através do programa social "Sabe Tudo", eram prédios onde
+podíamos utilizar os computadores para aprender, desde então dedico boas horas do meu dia
+para a programação.
+
+Na minha vida inteira sempre fui dedicado em tudo o que faço, hoje tenho a oportunidade de
+cursar Análise e Desenvolvimento de Sistemas na FACENS - FACULDADE DE ENGENHARIA
+DE SOROCABA pois tive a felicidade de conquistar uma bolsa integral devido à minha nota no
+ENEM, minhas expectativas para minha formação são as melhores, pude conhecer pessoas
+extraordinárias na faculdade, além de amigos de infância que também trabalham na área, sei
+que minha rede de contatos é cheia de pessoas especiais e que tem potencial para criar coisas
+grandes no futuro.
+
+Meu plano de carreira à curto prazo é encontrar uma boa oportunidade para entrar no mercado
+de trabalho, afim de aprimorar meus conhecimentos, acima do salário, meu foco é encontrar
+uma vaga onde eu possa mostrar que tenho capacidade e sobretudo, aprender. Hoje não
+trabalho na minha área, mas aprendi com meu líder que trabalho não é destino, trabalho é
+ponte! E sou muito orgulhoso de estar onde estou, tendo oportunidade de aprimorar minha
+comunicação, criar networking e me preparar para quando a oportunidade chegar, estar seguro
+de que consigo.
             </p>
         </div>
     </section>
